--- a/css/style.css
+++ b/css/style.css
@@ -174,3 +174,56 @@ body.fourchan_x {
 .stub ~ .post {
   display: none !important;
 }
+
+/* Menu */
+.menu-button {
+  display: inline-block;
+}
+.menu-button > span {
+  border-top:   6px solid;
+  border-right: 4px solid transparent;
+  border-left:  4px solid transparent;
+  display: inline-block;
+  margin: 2px;
+  vertical-align: middle;
+}
+#menu {
+  position: absolute;
+  outline: none;
+}
+.entry {
+  border-bottom: 1px solid rgba(0, 0, 0, .25);
+  cursor: pointer;
+  display: block;
+  outline: none;
+  padding: 3px 7px;
+  position: relative;
+  text-decoration: none;
+  white-space: nowrap;
+}
+.entry:last-child {
+  border: none;
+}
+.focused.entry {
+  background: rgba(255, 255, 255, .33);
+}
+.entry.has-submenu {
+  padding-right: 20px;
+}
+.has-submenu::after {
+  content: "";
+  border-left:   6px solid;
+  border-top:    4px solid transparent;
+  border-bottom: 4px solid transparent;
+  display: inline-block;
+  margin: 4px;
+  position: absolute;
+  right: 3px;
+}
+.has-submenu:not(.focused) > .submenu {
+  display: none;
+}
+.submenu {
+  position: absolute;
+  margin: -1px 0;
+}
