--- a/css/style.css
+++ b/css/style.css
@@ -123,6 +123,7 @@ a[href="javascript:;"] {
   color: #FFF;
   font-weight: 700;
   text-shadow: 0 1px 2px rgba(0, 0, 0, .5);
+  box-shadow: 0 1px 2px rgba(0, 0, 0, .15);
   border-radius: 2px;
   margin: 1px auto;
   width: 500px;
