--- a/css/tomorrow.css
+++ b/css/tomorrow.css
@@ -3,6 +3,9 @@
   background-color: #282A2E;
   border-color: #111;
 }
+:root.tomorrow .field:focus {
+  border-color: #000;
+}
 
 /* Header */
 :root.tomorrow #header-bar {
@@ -17,6 +20,11 @@
 :root.tomorrow .inline {
   border-color: #111;
   background-color: rgba(0, 0, 0, .14);
+}
+
+/* QR */
+:root.tomorrow .qrpreview {
+  background-color: rgba(255, 255, 255, .15);
 }
 
 /* Menu */
