--- a/css/yotsuba.css
+++ b/css/yotsuba.css
@@ -3,6 +3,9 @@
   background-color: #F0E0D6;
   border-color: #D9BFB7;
 }
+:root.yotsuba .field:focus {
+  border-color: #EA8;
+}
 
 /* Header */
 :root.yotsuba #header-bar {
@@ -17,6 +20,11 @@
 :root.yotsuba .inline {
   border-color: #D9BFB7;
   background-color: rgba(255, 255, 255, .14);
+}
+
+/* QR */
+:root.yotsuba .qrpreview {
+  background-color: rgba(0, 0, 0, .15);
 }
 
 /* Menu */
