--- a/css/yotsuba-b.css
+++ b/css/yotsuba-b.css
@@ -28,7 +28,7 @@
 }
 
 /* Menu */
-:root.yotsuba-b .entry:not(:last-child) {
+:root.yotsuba-b .entry {
   border-bottom: 1px solid #B7C5D9;
 }
 :root.yotsuba-b .focused.entry {
