--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/* general */
+/* General */
 .dialog {
   box-shadow: 0 1px 2px rgba(0, 0, 0, .15);
   border: 1px solid;
@@ -132,7 +132,7 @@ a[href="javascript:;"] {
   padding: 0;
 }
 
-/* notifications */
+/* Notifications */
 #notifications {
   text-align: center;
 }
@@ -177,7 +177,7 @@ a[href="javascript:;"] {
   overflow: auto;
 }
 
-/* thread updater */
+/* Thread Updater */
 #updater {
   text-align: right;
 }
@@ -195,7 +195,7 @@ a[href="javascript:;"] {
   color: limegreen;
 }
 
-/* quote */
+/* Quote */
 .quotelink.deadlink {
   text-decoration: underline !important;
 }
@@ -244,7 +244,7 @@ a[href="javascript:;"] {
   box-shadow: 0 0 0 2px rgba(216, 94, 49, .7);
 }
 
-/* file */
+/* File */
 .fileText:hover .fntrunc,
 .fileText:not(:hover) .fnfull {
   display: none;
@@ -256,9 +256,10 @@ a[href="javascript:;"] {
 :root.presto.fit-width .full-image {
   width: 100%;
 }
-.expanded-image > .op > .file > .fileThumb,
-.expanded-image > .op > .file > .fileThumb > .full-image {
-  float: none;
+.expanded-image > .op > .file::after {
+  content: '';
+  clear: both;
+  display: table;
 }
 #ihover {
   -moz-box-sizing: border-box;
@@ -524,7 +525,7 @@ a[href="javascript:;"] {
   padding-right: 20px;
 }
 .has-submenu::after {
-  content: "";
+  content: '';
   border-left:   6px solid;
   border-top:    4px solid transparent;
   border-bottom: 4px solid transparent;
