--- a/css/futaba.css
+++ b/css/futaba.css
@@ -17,6 +17,9 @@
 }
 
 /* Quote */
+:root.futaba .backlink.deadlink {
+  color: #00E !important;
+}
 :root.futaba .inline {
   border-color: #D9BFB7;
   background-color: rgba(255, 255, 255, .14);
