--- a/css/yotsuba-b.css
+++ b/css/yotsuba-b.css
@@ -17,6 +17,9 @@
 }
 
 /* Quote */
+:root.yotsuba-b .backlink.deadlink {
+  color: #34345C !important;
+}
 :root.yotsuba-b .inline {
   border-color: #B7C5D9;
   background-color: rgba(255, 255, 255, .14);
