--- a/css/yotsuba.css
+++ b/css/yotsuba.css
@@ -17,6 +17,9 @@
 }
 
 /* Quote */
+:root.yotsuba .backlink.deadlink {
+  color: #00E !important;
+}
 :root.yotsuba .inline {
   border-color: #D9BFB7;
   background-color: rgba(255, 255, 255, .14);
