--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ a[href="javascript:;"] {
 
 /* fixed, z-index */
 #qp, #ihover,
-#updater, #stats,
+#updater, #thread-stats,
 #header,
 #qr, #watcher {
   position: fixed;
@@ -67,7 +67,7 @@ a[href="javascript:;"] {
 #menu {
   z-index: 60;
 }
-#updater, #stats {
+#updater, #thread-stats {
   z-index: 50;
 }
 #header:hover {
@@ -197,6 +197,13 @@ a[href="javascript:;"] {
 }
 .new {
   color: limegreen;
+}
+
+/* Thread Stats */
+#thread-stats {
+  background: none;
+  border: none;
+  box-shadow: none;
 }
 
 /* Quote */
