--- a/css/style.css
+++ b/css/style.css
@@ -17,8 +17,8 @@
   -webkit-transition: color .25s, border-color .25s;
   transition: color .25s, border-color .25s;
 }
-.field:-moz-placeholder,
-.field:hover:-moz-placeholder {
+.field::-moz-placeholder,
+.field:hover::-moz-placeholder {
   color: #AAA !important;
 }
 .field:hover {
