Fix favicons in the Rice section outside threads. Fix Opera ignoring the max-height/width of the settins dialog. I like how opera doesn't reflow when you resize the browser. Chropera when?

--- a/css/style.css
+++ b/css/style.css
@@ -194,9 +194,9 @@ a[href="javascript:;"] {
   justify-content: center;
   position: fixed;
   top: 0;
-  right: 0;
-  bottom: 0;
   left: 0;
+  height: 100%;
+  width: 100%;
 }
 #settings {
   -moz-box-sizing: border-box;
