--- a/css/style.css
+++ b/css/style.css
@@ -198,7 +198,7 @@ a[href="javascript:;"] {
   height: 100%;
   width: 100%;
 }
-#settings {
+#fourchanx-settings {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   box-shadow: 0 0 15px rgba(0, 0, 0, .15);
@@ -214,15 +214,15 @@ a[href="javascript:;"] {
   -webkit-flex-direction: column;
   flex-direction: column;
 }
-#settings > nav {
+#fourchanx-settings > nav {
   display: -webkit-flex;
   display: flex;
   padding: 2px 2px 0;
 }
-#settings > nav a {
+#fourchanx-settings > nav a {
   text-decoration: underline;
 }
-#settings > nav a.close {
+#fourchanx-settings > nav a.close {
   text-decoration: none;
   padding: 2px;
 }
@@ -270,12 +270,12 @@ a[href="javascript:;"] {
 .section-sauce textarea {
   height: 350px;
 }
-#settings textarea {
+#fourchanx-settings textarea {
   font-family: monospace;
   min-width: 100%;
   max-width: 100%;
 }
-#settings code {
+#fourchanx-settings code {
   color: #000;
   background-color: #FFF;
   padding: 0 2px;
